flux/infrastructure/configs/mongodb/ops-manager-ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mongodb-ops-manager-ingressroute
  namespace: mongodb
  annotations:
    kubernetes.io/ingress.class: traefik-internal
    uptime-kuma.autodiscovery.probe.name: "MongoDB Ops Manager"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`mongodb.clsn.dev`)
      services:
        - name: ops-manager-svc
          kind: Service
          port: 8080
